--- a/react-chat/package.json
+++ b/react-chat/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-chat",
-  
+  "homepage": "https://zaykka.github.io/2022-2-VK-EDU-FS-Frontend-S-Serebryakova",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
