--- a/exam/package.json
+++ b/exam/package.json
@@ -1,6 +1,7 @@
 {
   "name": "exam",
   "version": "0.1.0",
+  "homepage": "https://zaykka.github.io/2022-2-VK-EDU-FS-Frontend-S-Serebryakova",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
